tests/baselines/reference/nestedFreshLiteral.errors.txt
nestedFreshLiteral.ts(12,21): error TS2322: Type '{ nested: { prop: { colour: string; }; }; }' is not assignable to type 'NestedCSSProps'.
  The types of 'nested.prop' are incompatible between these types.
    Object literal may only specify known properties, but 'colour' does not exist in type 'CSSProps'. Did you mean to write 'color'?


==== nestedFreshLiteral.ts (1 errors) ====
    interface CSSProps  {
      color?: string
    }
    interface NestedCSSProps {
      nested?: NestedSelector
    }
    interface NestedSelector  {
      prop: CSSProps;
    }
    
    let stylen: NestedCSSProps = {
      nested: { prop: { colour: 'red' } }
                        ~~~~~~
!!! error TS2322: Type '{ nested: { prop: { colour: string; }; }; }' is not assignable to type 'NestedCSSProps'.
!!! error TS2322:   The types of 'nested.prop' are incompatible between these types.
!!! error TS2322:     Object literal may only specify known properties, but 'colour' does not exist in type 'CSSProps'. Did you mean to write 'color'?
    }